feat(*): adjust ethical issues

--- a/latex/autonomousDriving.tex
+++ b/latex/autonomousDriving.tex
@@ -6,41 +6,42 @@
 \usepackage{amsfonts}
 \usepackage{geometry}
 \usepackage{amssymb}
-\usepackage[backend=biber, style=numeric]{biblatex}
+\usepackage[backend=biber, style=numeric, sorting=none]{biblatex}
 \addbibresource{library.bib}
 \geometry{
 	left=3cm,
 	textwidth=15cm}
 \begin{document}
 \noindent
+\begin{center}
 \begin{huge}
 \underline{Hürden auf dem Weg zum autonomen Fahren}
 \end{huge}
+\end{center}
 \vspace{10mm}
-\\
 \noindent
-Wer sich aktuell mit den neusten Entwicklungen auf dem Fahrzeugmarkt auseinandersetzt wird ohne großen zeitlichen Aufwand erkennen: Autonomes Fahren ist das Fokusgiebiet der Autobauer weltweit. Dabei lagen deutsche Riesen wie VW, BMW oder Mercedes lange hinter ihren amerikanischen Kontrahänten wie Wymo oder Tesla zurück. Allerdings scheint sich der technische Vorsprung Schritt für Schritt zu verringern und auch in Deutschland sind die Tests für autonome Fahrzeuge mittlerweile in vollem Gange. Nichtsdestotrotz lassen Unfälle, wie sie sich vor allem im Zusammenhang mit Tesla Fahrzeugen im Vertrauen auf dessen "Autopilot"-Funktion ereigneten, durchaus Zweifel am aktuellen Stand der Technik und der generellen Machbarkeit des autonomen Fahrens laut werden. Deshalb soll im Folgenden ein kurzer Überblick über die noch zu überwindendenen Hürden auf dem Weg zum vollständig autonomen Fahrzeug gegeben werden.
+Wer sich aktuell mit den neusten Entwicklungen auf dem Fahrzeugmarkt auseinandersetzt, wird ohne großen zeitlichen Aufwand erkennen: Autonomes Fahren ist das Fokusgebiet der Autobauer weltweit. Dabei lagen deutsche Riesen wie VW, BMW oder Mercedes lange hinter ihren amerikanischen Kontrahänten wie Waymo oder Tesla zurück. Allerdings scheint sich der technische Vorsprung Schritt für Schritt zu verringern und auch in Deutschland sind die Tests für autonome Fahrzeuge mittlerweile in vollem Gange. Nichtsdestotrotz lassen Unfälle, wie sie sich vor allem im Zusammenhang mit Tesla-Fahrzeugen im Vertrauen auf deren ``Autopilot''-Funktion ereigneten, durchaus Zweifel am aktuellen Stand der Technik und der generellen Machbarkeit des autonomen Fahrens laut werden. Deshalb soll im Folgenden ein kurzer Überblick über die noch zu überwindenden Hürden auf dem Weg zum vollständig autonomen Fahrzeug gegeben werden.\cite{StandAutonomesFahren}
 \\
 \\
-Zunächst ist hierbei wichtig sich Gedanken zu machen was überhaupt gemeint ist, wenn man von autonomen Fahren spricht. Dazu werden Fahrzeuge je nach Automatisierungsgrad einer von insgesamt fünf Stufen zugeteilt. Die erste dieser Stufen beschreibt dabei Fahrzeuge mit einfachen Assistenzsystemen wie einem Tempomat, gefolgt von Autos der Stufe zwei die den Fahrer zusätzlich beispielsweise durch Spurhalteassistenten unterstützen. Den Abschluss dieser bisher noch maximal "teilautomatisierten" Fahrzeuge bilden Fahrzeuge der Stufe drei, die es dem Fahrer durch ihre Assistenzsysteme bereits ermöglichen für kurze Zeit die Hände vom Steuer zunehmen. Die Menge der "automatisierten" Fahrzeuge bilden Stufe vier und fünf, welche sich durch die Notwendigkeit eines Fahrers voneinander abgrenzen. Wird für ein Fahrzeug der Stufe 4 noch ein Fahrer benötigt, wenngleich dieser nur noch in Notsituationen ins Geschehen eingreifen müsste. So kann in einem Fahrzeug der Stufe fünf vollkommen darauf verzichtet werden. Die Fahrzeuge dieser letzten Stufe sollen unter allen Umständen in der Lage sein ohne Fahrzeugführer zu handeln bzw. zu reagieren und bilden damit die Menge der tatsächlich autonomen Fahrzeuge. Im Folgenden ist deshalb mit autonomen Fahrzeug immer ein Fahrzeug der Stufe fünf gemeint.
+Zunächst muss dazu aber der Begriff ``autonomes Fahren'' definiert werden. Fahrzeuge werden je nach Automatisierungsgrad einer von insgesamt fünf Stufen zugeteilt. Die erste dieser Stufen beschreibt Fahrzeuge mit einfachen Assistenzsystemen wie einem Tempomat oder Spurhalteassistenten, die den Fahrer unterstützen. Gefolgt werden diese von Fahrzeugen der Stufe zwei, die es dem Fahrer durch Nutzung selbiger Assistenzsysteme erlauben die Hände kurzzeitig vom Steuer zu nehmen. Stufe drei hingegen erlaubt es dem Fahrer unter bestimmten Umständen sich auch für längere Zeit dem Fahrgeschehen abzuwenden. Der Fahrer muss aber im Notfall das Steuer wieder übernehme. Stufe vier Wagen übernehmen Fahraufgaben wie beispielsweise Autobahnfahrten nun vollkommen autonom und bringen das Fahrzeug im Extremfall selbstständig in einen sicheren Zustand. Das erlaubt dem Fahren im Gegensatz zur Stufe drei auch das Schlafen während der Fahrt. In einem Stufe fünf Fahrzeug kann nun gänzlich auf einen Fahrer verzichtet werden. Die Fahrzeuge dieser letzten Stufe sollen unter allen Umständen in der Lage sein ohne Fahrzeugführer zu handeln bzw. zu reagieren und bilden damit die Menge der tatsächlich autonomen Fahrzeuge. Im Allgemeinen ist im Kontext ``autonomes Fahren'' damit immer ein Fahrzeug der Stufe fünf gemeint.\cite{5Stages}
 \\
 \\
-Aus technischer Sicht ist nun zu Beginn vor allem die immense Datenmenge die bei der Erfassung der Umgebung des Fahrzeugs anfällt als problematisch zu nennen. Diese Daten stammen von unterschiedlichen Arten von Sensoren und bilden die Grundlage der Entscheidungsfindung des Fahrzeugs. So werden unter Anderem Radar- oder Lidarsysteme zur Abstandserkennung genutzt und mit Hilfe von Kameras, die in verschiedene Richtungen ausgerichtet sind, werden Objekte in der Nähe des Fahrzeugs detektiert. Nach ... fallen damit schätzungsweise fünf Gigabyte Daten pro gefahrener Minute an, welche natürlich kontinuierlich in Echtzeit verarbeitet werden müssen. Die dafür benötigte Rechenleistung ist enorm und stellt eine der größten Hürden der Automobilhersteller auf dem Weg zum vollautonomen Fahrzeug dar. Gerade in Zeiten der E-Mobilität ergibt sich zusätzlich die Forderung nach einer möglichst energieeffizienten Lösung, da autonome Fahrzeuge ansonsten bzgl. ihrer Reichweite wohl kaum überzeugen würden. 
+Aus technischer Sicht ist nun zu Beginn vor allem die immense Datenmenge die bei der Erfassung der Umgebung des Fahrzeugs anfällt als problematisch zu nennen. Diese Daten stammen von unterschiedlichen Arten von Sensoren und bilden die Grundlage der Entscheidungsfindung des Fahrzeugs. So werden unter Anderem Radar- oder Lidarsysteme zur Abstandserkennung genutzt und mit Hilfe von Kameras, die in verschiedene Richtungen ausgerichtet sind, werden Objekte in der Nähe des Fahrzeugs detektiert. Nach \cite{StandAutonomesFahren} fallen damit schätzungsweise fünf Gigabyte Daten pro gefahrener Minute an, welche natürlich kontinuierlich in Echtzeit verarbeitet werden müssen. Die dafür benötigte Rechenleistung ist enorm und stellt eine der größten Hürden der Automobilhersteller auf dem Weg zum vollautonomen Fahrzeug dar. Gerade in Zeiten der E-Mobilität ergibt sich zusätzlich die Forderung nach einer möglichst energieeffizienten Lösung, da autonome Fahrzeuge ansonsten bzgl. ihrer Reichweite wohl kaum überzeugen würden. 
 \\
 Zusätzlich ist auch die Zuverlässigkeit der Sensoren bei extremeren Wetterlagen ein Flaschenhals bei der Entwicklung autonomer Fahrzeuge. Im Falle von Starkregen, Nebel oder Schnee ist die erwähnte Sensorik durchaus störanfällig, was im Kontext eines autonomen Fahrzeugs natürlich folgenschwere Fehler nach sich ziehen kann.  Ist es bei einem Fahrzeug der Stufe drei oder vier noch vertretbar die Kontrolle in diesem Fall wieder zurück an den Fahrer zu geben. So entfällt diese Option bei Fahrzeugen der Stufe 5 aufgrund des Mangels eines Fahrers. Deshalb sind für diese Art von Fahrzeug Sensoren nötig die auch bei extremen Wetterlagen weiterhin zuverlässig arbeiten.
 \\
-Des Weiteren ist für den Aufbau eines autonomen Straßennetzes auch die Kommunikation der Verkehrsteilnehmer untereinander von Nöten. Zwar gibt es dafür bereits erste Versuche beispielsweise VWs "Car-To-X"-Technologie, allerdings ergeben sich auch aus dieser Forderung Probleme. Zum einen müssten zunächst alle Verkehrsteilnehmer mit dieser Technologie ausgestattet werden, was sich als ein durchaus langwieriger Prozess herausstellt wenn man bedenkt das autonome Fahrzeuge der Schätzung von Experten entsprechend im Jahre 2050 erst eine Marktdurchdringung von 70 Prozent erreichen werden. Zum anderen ergeben sich aus dieser Form von Konnektivität und Offenheit zwischen den Verkehrsteilnehmern ganz neue Gefahren was die Cyberkriminalität betrifft. Ein Fahrzeug das sich theoretisch hacken und fernsteuern lässt kann dann schnell zur Waffe werden. Auch in diesem Bereich sind daher zuverlässige Lösungs- und Sicherheitsmechanismen notwendig.\cite{Test}
+Des Weiteren ist für den Aufbau eines autonomen Straßennetzes unter Umständen auch die Kommunikation der Verkehrsteilnehmer untereinander von Nöten. Zwar gibt es dafür bereits erste Versuche beispielsweise VWs ``Car-To-X''-Technologie, allerdings ergeben sich auch aus dieser Forderung Probleme. Zum einen müssten zunächst alle Verkehrsteilnehmer mit dieser Technologie ausgestattet werden, was sich als ein durchaus langwieriger Prozess herausstellt wenn man bedenkt das autonome Fahrzeuge der Schätzung von Experten entsprechend im Jahre 2050 erst eine Marktdurchdringung von 70 Prozent erreichen werden. Zum anderen ergeben sich aus dieser Form von Konnektivität und Offenheit zwischen den Verkehrsteilnehmern ganz neue Gefahren was die Cyberkriminalität betrifft. Ein Fahrzeug das sich theoretisch hacken und fernsteuern lässt kann dann schnell zur Waffe werden. Auch in diesem Bereich sind daher zuverlässige Lösungs- und Sicherheitsmechanismen notwendig.
 \\
 \\
-Neben diesen zunächst rein technischen Problemen existieren auch abseits der Technik noch offene Fragen die geklärt werden müssen. Zwar wurden zumindest in Deutschland mit der Verabschiedung von Gesetzen zum autonomen Fahren im Mai 2021 (?) die Weichen  aus rechtlicher Sicht gestellt, allerdings ist autonomes Fahren auch immer aus ethischen Gesichtspunkten zu betrachten. So müssen Vorschriften für das Verhalten der Fahrzeuge in Extremsituationen entwickelt werden, die ethisch und moralisch vertretbar sind. Es ist ein Leichtes sich Situationen vorzustellen in denen das Fahrzeug beispielsweise zwischen dem Erfassen einer alten Dame, die die Straße überquert oder einem Kind, das unerwartet zwischen parkenden Autos hervorspringt entscheiden muss. Zwar scheint die Entscheidung aus utilitaristischer Sicht einfach und die meisten würden wahrscheinlich zustimmen, dass im Extremfall natürlich das Leben des Kindes zu verschonen wäre. Nichtsdestotrotz würde das Opfern der alten Dame damit zum Einen im Widerspruch zum ersten Artikel des deutschen Grundgesetzes, wonach die "Würde des Menschen unantastbar" ist. Zum Anderen wäre dies auch eine Form von Diskriminierung, was sich in Summe auch wenig mit der deutschen Rechtssprechung verbinden ließe. Ein rein zufällige Entscheidung zwischen beiden Optionen wirkt auf der anderen Seite wie Willkür und ist damit auch wenig überzeugend. 
+Neben diesen zunächst rein technischen Problemen existieren auch abseits der Technik noch viele offene Fragen. Zwar wurde, zumindest in Deutschland, mit der Verabschiedung von Gesetzen im Mai 2021 für autonome Fahrzeuge der Stufe vier eine erste rechtliche Basis für den Betrieb ebensolcher Fahrzeuge geschaffen. Allerdings fehlen für konkretere Bestimmungen Antworten auf eine Vielzahl ethischer Fragen und Probleme. Es müssen also Vorschriften für das Verhalten der Fahrzeuge und deren Nutzung entwickelt werden, die ethisch und moralisch vertretbar sind. Einen Anfang machen dabei durch eine vom Bundesministerium für Verkehr- und digitale Infrastruktur (BMVI) einberufenen Ethik-Kommission entwickelte Leitlinien. Diese insgesamt 20 ``Ethischen Regeln für den autonomen und vernetzten Fahrzeugverkehr'' (Quelle) bilden einen ersten ethischen Rahmen für das Verhalten und die zukünftige Umsetzung autonomer Fahrzeuge in Deutschland.
 \\
-Auch ist in diesem Zusammenhang die Priorität der Insassen des Fahrzeugs von zentraler Bedeutung. Wie soll sich das Fahrzeug verhalten wenn in Notsituationen Schlimmeres nur durch das Opfern des Fahrzeugführers verhindert werden kann? Ist ein Fahrzeug das im Extremfall den Fahrer opfert überhaupt von Interesse für Verbraucher? Auf all diese Fragen müssen die Ingenieure und Entwickler von autonomen Fahrzeugen Antworten finden, was in Summe verdeutlicht, dass die Einführung autonomer Fahrzeuge mehr ist als nur eine technische Neuerung.
-\\
-\\
-Ein letzter zentraler Punkt, der eng mit dem vorherigen Abschnitt zusammenhängt ist die gesellschaftliche Akzeptanz von autonomen Fahrzeugen. So lassen sich autonome Fahrzeuge nur dann auf dem Markt platzieren, wenn in Summe auch genügend Personen auf diese Technik vertrauen. Allerdings muss man sich hier immer vor Augen führen, dass  selbst nach Jahren der Entwicklung Fehler und Unfälle nie gänzlich ausgeschlossen werden können. Zwar würden sich in ferner Zukunft die Anzahl der Unfälle, der Verkehrstoten und Verletzten durch die flächendeckende Nutzung autonomer Fahrzeuge wohl drastisch reduzieren lassen. Doch es bleibt dennoch ein Restrisiko und sich der Illusion hinzugeben die Technik wird niemals falsch reagieren ist im Grunde naiv.  
+Allerdings mangelt es diesen Leitlinien an konkreten Umsetzungsempfehlungen. So ist gerade das Verhalten der Fahrzeuge in sog. Dilemmasituationen, also Situationen in denen das Fahrzeug ``vor der Entscheidung steht eines von zwei Übeln notwendigerweise verwirklichen zu müssen''\cite{EthikBericht} gerade im Bereich der Schadensminimierung noch nicht ``befriedigend und [...] konsensual''\cite{EthikBericht} geklärt. Des Weiteren ist es fraglich ob und wann die Algorithmen dieser Fahrzeuge in der Lage sind aus den zur Verfügung stehenden Daten eine für solche Entscheidungen notwendige Schadensabschätzung zu realisieren. Daneben sind auch die Vorschriften und Empfehlungen im Bereich der Datensicherheit der Verkehrsmittel und der Autonomie des Fahrers genauer zu konkretisieren. Alles in allem ist damit die Konsensfindung auf ethischer Seite eine zentrale Notwenigkeit auf dem Weg zum autonomen Fahrzeug. \cite{EthikBericht}
 \\
 \\
-Schlussendlich wird dieser letzte Punkt über Erfolg und Versagen der Technologie "autonomes Fahren" entscheiden. Die Vergangenheit zeigt, dass das Lösen von technischen Problemen oft nur eine Frage der Zeit ist und auch ethische Gesichtspunkte werden irgendwann in vertretbarer Weise in die Algorithmen solcher Fahrzeuge integriert sein. Die alles entscheidende Frage ist dann: Zieht eine Gesellschaft 100 Tote durch Fehler einer künstlichen Intelligenz 1000 Toten durch menschliches Versagen vor und wenn ja, wie viel Zeit wird bis dahin vergehen? 
+Ein letzter Punkt, der eng mit dem vorherigen Abschnitt zusammenhängt, ist die gesellschaftliche Akzeptanz von autonomen Fahrzeugen. So lassen sich autonome Fahrzeuge nur dann auf dem Markt platzieren, wenn in Summe auch genügend Personen auf diese Technik vertrauen. Allerdings muss man sich hier immer vor Augen führen, dass  selbst nach Jahren der Entwicklung Fehler und Unfälle nie gänzlich ausgeschlossen werden können. Zwar würden sich in ferner Zukunft die Anzahl der Unfälle, der Verkehrstoten und Verletzten durch die flächendeckende Nutzung autonomer Fahrzeuge wohl drastisch reduzieren lassen. Doch es bleibt dennoch ein Restrisiko und sich der Illusion hinzugeben die Technik wird niemals falsch reagieren ist im Grunde naiv. Ob die Nutzung dieser Art von Fortbewegung dennoch Anklang findet bleibt daher abzuwarten.
+\\
+\\
+Schlussendlich wird dieser letzte Punkt über Erfolg und Versagen der Technologie ``autonomes Fahren'' entscheiden. Die Vergangenheit zeigt, dass das Lösen von technischen Problemen oft nur eine Frage der Zeit ist und auch ethische Gesichtspunkte werden irgendwann in vertretbarer Weise in die Algorithmen solcher Fahrzeuge integriert sein. Die alles entscheidende Frage ist dann: Zieht eine Gesellschaft 100 Tote durch Fehler einer künstlichen Intelligenz 1000 Toten durch menschliches Versagen vor und wenn ja, wie viel Zeit wird bis dahin vergehen? 
 
 \printbibliography
 
